--- a/GuitarLEDgend/app/src/main/res/layout/activity_post_playing.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_post_playing.xml
@@ -11,10 +11,12 @@
     tools:context="com.example.hugo.guitarledgend.activities.PostPlayingActivity">
 
     <TextView
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/graph_title_postplayingactivity"/>
     <TextView
+        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/graph_title_postplayingactivity"
@@ -26,28 +28,6 @@
         android:layout_height="200dip"
         android:id="@+id/graph_PostPlayingActivity"
         android:layout_below="@+id/graph_title2_postplayingactivity"/>
-
-    <TextView
-        android:textSize="30sp"
-        android:layout_height="100dp"
-        android:id="@+id/score"
-        android:minHeight="50dip"
-        android:minWidth="120dip"
-        android:gravity="center"
-        android:layout_marginTop="26dp"
-        android:layout_width="100dp"
-        android:layout_below="@+id/graph_PostPlayingActivity"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        style="@style/button"
-        android:text="Rejouer zone"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/replay_area_button"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
 
     <Button
         style="@style/button"
@@ -78,15 +58,54 @@
         android:layout_marginBottom="17dp" />
 
     <Button
-        android:text="play"
+        style="@style/button"
+        android:text="Rejouer zone"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/replay_area_button"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="19dp" />
+
+    <Button
+        style="@style/button"
+        android:text="Play"
         android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/playButton"
-        android:layout_alignTop="@+id/score"
-        android:layout_toLeftOf="@+id/score"
-        android:layout_toStartOf="@+id/score"
-        android:layout_marginTop="11dp" />
+        android:layout_alignBaseline="@+id/replay_area_button"
+        android:layout_alignBottom="@+id/replay_area_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:textSize="20sp"
+        android:layout_height="wrap_content"
+        android:id="@+id/rate"
+        android:minHeight="25dip"
+        android:minWidth="120dip"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_below="@+id/graph_PostPlayingActivity"
+        android:layout_alignLeft="@+id/reussis"
+        android:layout_alignStart="@+id/reussis"
+        android:layout_marginTop="18dp" />
+
+    <TextView
+        android:textSize="20sp"
+        android:layout_height="wrap_content"
+        android:id="@+id/reussis"
+        android:minHeight="25dip"
+        android:minWidth="120dip"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="15dp"
+        android:layout_above="@+id/replay_button"
+        android:layout_alignLeft="@+id/replay_button"
+        android:layout_alignStart="@+id/replay_button" />
 
 
 </RelativeLayout>
