--- a/GuitarLEDgend/app/src/main/res/layout/activity_add_partition.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_add_partition.xml
@@ -3,18 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/fichier_addPartition"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/fichier"
-        android:layout_marginTop="66dp"
-        android:background="@drawable/edit_background"
-        android:textCursorDrawable="@null"
+    <TextView
+        android:text="Ajout d'une partition"
         android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
+        android:textSize="30sp"
+        android:id="@+id/info2"
         android:layout_alignParentTop="true"
-        android:layout_alignLeft="@+id/nom_addPartition"
-        android:layout_alignStart="@+id/nom_addPartition" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 
     <EditText
         android:id="@+id/genre_addPartition"
@@ -54,6 +54,19 @@
         android:layout_below="@+id/fichier_addPartition"
         android:layout_centerHorizontal="true" />
 
+    <EditText
+        android:id="@+id/fichier_addPartition"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/fichier"
+        android:layout_marginTop="59dp"
+        android:background="@drawable/edit_background"
+        android:textCursorDrawable="@null"
+        android:gravity="center"
+        android:layout_below="@+id/info2"
+        android:layout_alignLeft="@+id/nom_addPartition"
+        android:layout_alignStart="@+id/nom_addPartition" />
+
     <Button
         style="@style/button"
         android:text="@string/ok"
@@ -61,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ok_button_AddPartitionActivity"
-        android:layout_marginTop="83dp"
+        android:layout_marginTop="54dp"
         android:layout_below="@+id/genre_addPartition"
         android:layout_centerHorizontal="true" />
 
