--- a/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_choose_speed.xml
@@ -3,6 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:text="Choississez une vitesse d'exécution, en %"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="58dp"
+        android:textSize="30sp"
+        android:id="@+id/info2"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
     <EditText
         android:id="@+id/speed_text"
         android:layout_width="200dp"
@@ -10,10 +23,10 @@
         android:background="@drawable/edit_background"
         android:textCursorDrawable="@null"
         android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:hint="@string/vitesse" />
-
+        android:layout_marginTop="91dp"
+        android:hint="@string/vitesse"
+        android:layout_below="@+id/info2"
+        android:layout_centerHorizontal="true" />
 
     <Button
         style="@style/button"
@@ -24,18 +37,6 @@
         android:id="@+id/ok_button_ChooseSpeedActivity"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="62dp" />
-
-    <TextView
-        android:text="Une vitesse de 10 corespond à la vitesse réelle."
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="89dp"
-        android:textSize="30sp"
-        android:id="@+id/info"
-        android:layout_below="@+id/speed_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginBottom="98dp" />
 
 </RelativeLayout>
