--- a/GuitarLEDgend/app/src/main/res/layout/activity_help.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_help.xml
@@ -15,7 +15,8 @@
 
 
     <ScrollView
-        android:layout_width="fill_parent"
+        android:layout_gravity="center"
+        android:layout_width="337dp"
         android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="wrap_content"
