--- a/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_profile_choose.xml
@@ -39,4 +39,15 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
+    <TextView
+        android:id="@+id/age_profile"
+        android:textSize="34sp"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:layout_below="@+id/nom_profile"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
