--- a/GuitarLEDgend/app/src/main/res/layout/activity_post_playing.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_post_playing.xml
@@ -64,10 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/replay_area_button"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="19dp" />
+        android:layout_alignParentBottom="true" />
 
     <Button
         style="@style/button"
@@ -84,19 +83,6 @@
     <TextView
         android:textSize="20sp"
         android:layout_height="wrap_content"
-        android:id="@+id/rate"
-        android:minHeight="25dip"
-        android:minWidth="120dip"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_below="@+id/graph_PostPlayingActivity"
-        android:layout_alignLeft="@+id/reussis"
-        android:layout_alignStart="@+id/reussis"
-        android:layout_marginTop="18dp" />
-
-    <TextView
-        android:textSize="20sp"
-        android:layout_height="wrap_content"
         android:id="@+id/reussis"
         android:minHeight="25dip"
         android:minWidth="120dip"
@@ -106,6 +92,19 @@
         android:layout_above="@+id/replay_button"
         android:layout_alignLeft="@+id/replay_button"
         android:layout_alignStart="@+id/replay_button" />
+
+    <TextView
+        android:textSize="20sp"
+        android:layout_height="wrap_content"
+        android:id="@+id/rate"
+        android:minHeight="25dip"
+        android:minWidth="120dip"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_above="@+id/reussis"
+        android:layout_alignLeft="@+id/reussis"
+        android:layout_alignStart="@+id/reussis"
+        android:layout_marginBottom="11dp" />
 
 
 </RelativeLayout>
