--- a/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/fragment_stats_detail.xml
@@ -6,13 +6,15 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:id="@+id/graph_title_statsdetailfragment"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_below="@+id/graph_title_statsdetailfragment"
         android:id="@+id/graph_title2_statsdetailfragment"/>
 
