--- a/GuitarLEDgend/app/src/main/res/layout/activity_add_choose.xml
+++ b/GuitarLEDgend/app/src/main/res/layout/activity_add_choose.xml
@@ -4,18 +4,6 @@
     android:layout_height="match_parent">
 
 
-    <Button
-        style="@style/button"
-        android:text="@string/ajouterPartition"
-        android:textSize="30sp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/ajouterPartition_button"
-        android:layout_marginTop="92dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/choisirPartition_butto" />
-
-
     <TextView
         android:text="Que souhaitez-vous faire ?"
         android:gravity="center"
@@ -23,10 +11,22 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="58dp"
         android:textSize="30sp"
-        android:id="@+id/info2"
+        android:id="@+id/info3"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        style="@style/button"
+        android:text="@string/ajouterPartition"
+        android:textSize="30sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ajouterPartition_button"
+        android:layout_marginTop="102dp"
+        android:layout_below="@+id/choisirPartition_butto"
+        android:layout_alignRight="@+id/choisirPartition_butto"
+        android:layout_alignEnd="@+id/choisirPartition_butto" />
 
     <Button
         style="@style/button"
@@ -35,8 +35,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/choisirPartition_butto"
-        android:layout_marginTop="76dp"
-        android:layout_below="@+id/info2"
+        android:layout_marginTop="99dp"
+        android:layout_below="@+id/info3"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
